@@ -136,6 +136,11 @@ print &ui_table_row(&hlink($text{'newbw_maillog'}, "bandwidth_maillog_def"),
 						  "bandwidth_maillog_rotated"),
 		     $config{'bw_maillog_rotated'}));
 
+# Include outgoing email
+print &ui_table_row(&hlink($text{'newbw_mailout', "bandwidth_mailout"),
+	&ui_radio("nomailout", $config{'bw_nomailout'},
+		  [ [ 0, $text{'yes'} ], [ 1, $text{'no'} ] ]));
+
 print &ui_hidden_table_end("table3");
 print &ui_form_end([ [ "save", $text{'save'} ] ]);
 
