@@ -1,0 +1,12 @@
+<header>Include outgoing email in bandwidth usage?</header>
+
+When this option is set to <b>Yes</b>, Virtualmin will include email relayed
+through the system to external addresses in the bandwidth usage totals for the
+sender's domain's. Email send by scripts on the system will not generally be
+included. <p>
+
+To disable this behaviour and only account for incoming email, select <b>No</b>
+instead. <p>
+
+<footer>
+
