@@ -822,3 +822,4 @@ When a domain is restored to a system with a new IP address, the IP in the SPF r
 When a virtual server is moved under a new owner, the Apache directives that control which user CGIs and PHP scripts run as are properly updated.
 Fixed bugs in the FAQMasterFlex installer that prevented it's config file from being setup properly.
 Re-wrote all code that locks configuration files managed by Virtualmin. This improves the coverage of Webmin logging, and makes it much safer to perform multiple operations on the same or different domains at once.
+Outgoing email relayed via the Virtualmin system is now counted towards the sender's domain's bandwidth limit, unless disabled on the Bandwidth Monitoring page.
